# mod-dlm-server-fastapi

./: README.md  docker-compose.yaml  openapi.yaml  pom.xml  setup.cfg
.github/workflows/: publish-pypi.yml  pypi-publish.yml
.openapi-generator/: FILES
src/main/resources/: openapi.yaml
src/mod_dlm_server/: main.py  security_api.py
src/mod_dlm_server/apis/: default_api.py  default_api_base.py
src/mod_dlm_server/models/: element_create.py  installation_and_connectivity.py  prefab_element.py  prefab_element_aesthetic_and_customization_options.py  prefab_element_bounding_box.py  prefab_element_dimensional.py  prefab_element_dimensional_width.py  prefab_element_documentation_and_compliance.py  prefab_element_documentation_and_compliance_certifications.py  prefab_element_economic_factors.py  prefab_element_installation_and_connectivity.py  prefab_element_lifecycle_and_maintenance.py  prefab_element_material.py  prefab_element_performance.py  prefab_element_performance_acoustic_properties.py  prefab_element_performance_fire_resistance.py  prefab_element_product_category.py  prefab_element_reuse_and_circularity.py  prefab_element_structural_properties.py  prefab_element_structural_properties_deflection_limit.py  prefab_element_structural_properties_load_bearing_capacity.py  prefab_element_structural_properties_seismic_resistance.py  prefab_element_structural_properties_wind_load_resistance.py  prefab_element_sustainability.py  prefab_element_version_metadata.py  product_category.py  sustainability.py  sustainability_origin.py  (+2 more)
tests/: conftest.py  test_default_api.py
(+41 files in other folders)
