[metadata]
name = mod_dlm_server
version = 1.1.0
description = mod-dlm-server is an open-source REST server for storing and querying element data described using the mod-dlm domain-specific language (DSL).
long_description = file: README.md
long_description_content_type = text/markdown
keywords = OpenAPI mod-dlm API
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
